--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@ code {
     monospace;
 }
 
+.App {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .Website {
     display: flex;
     align-items: center;
@@ -32,4 +38,6 @@ code {
 
 .WebBlock {
     display: flex;
+    width: 1000px;
+    flex-wrap: wrap;
 }
